add consumer use provider version >= this.version